--- a/1__프로젝트_개요.html
+++ b/1__프로젝트_개요.html
@@ -45,7 +45,7 @@
       <div id="u4" class="ax_default paragraph">
         <div id="u4_div" class=""></div>
         <div id="u4_text" class="text ">
-          <p><span>[개선] 고객센터 개선요청 요구사항건</span></p>
+          <p><span>[개선] 고객센터 개선요청</span></p>
         </div>
       </div>
 
@@ -84,6 +84,9 @@
         <!-- Unnamed (Table Cell) -->
         <div id="u10" class="ax_default table_cell">
           <img id="u10_img" class="img " src="images/1__프로젝트_개요/u10.png"/>
+          <div id="u10_text" class="text ">
+            <p><span>고객센터 개선요청</span></p>
+          </div>
         </div>
 
         <!-- Unnamed (Table Cell) -->
@@ -97,6 +100,9 @@
         <!-- Unnamed (Table Cell) -->
         <div id="u12" class="ax_default table_cell">
           <img id="u12_img" class="img " src="images/1__프로젝트_개요/u12.png"/>
+          <div id="u12_text" class="text ">
+            <p><span>기능개선</span></p>
+          </div>
         </div>
       </div>
 
@@ -216,7 +222,7 @@
         <div id="u28" class="ax_default table_cell">
           <img id="u28_img" class="img " src="images/1__프로젝트_개요/u28.png"/>
           <div id="u28_text" class="text ">
-            <p><span>2018.06.04</span></p>
+            <p><span>2018.06.05</span></p>
           </div>
         </div>
 
@@ -322,7 +328,7 @@
         <div id="u44" class="ax_default table_cell">
           <img id="u44_img" class="img " src="images/1__프로젝트_개요/u44.png"/>
           <div id="u44_text" class="text ">
-            <p><span>-정기결제 상품 - 결제대기 상태일경우 현상태 및 사유 제공</span></p>
+            <p><span>-정기결제 상품 - 결제대기 상태일경우 현상태 및 사유 제공</span></p><p><span>-M머니사용내역, 나의 결제내역 : 취소 상태 반영 추가</span></p>
           </div>
         </div>
 
@@ -536,7 +542,7 @@
         <div id="u72" class="ax_default table_cell">
           <img id="u72_img" class="img " src="images/1__프로젝트_개요/u19.png"/>
           <div id="u72_text" class="text ">
-            <p><span>2018.06.05</span></p>
+            <p><span>2018.06.07</span></p>
           </div>
         </div>
 
@@ -582,83 +588,119 @@
 
         <!-- Unnamed (Table Cell) -->
         <div id="u78" class="ax_default table_cell">
-          <img id="u78_img" class="img " src="images/1__프로젝트_개요/u19.png"/>
+          <img id="u78_img" class="img " src="images/1__프로젝트_개요/u78.png"/>
         </div>
 
         <!-- Unnamed (Table Cell) -->
         <div id="u79" class="ax_default table_cell">
-          <img id="u79_img" class="img " src="images/1__프로젝트_개요/u19.png"/>
+          <img id="u79_img" class="img " src="images/1__프로젝트_개요/u78.png"/>
         </div>
 
         <!-- Unnamed (Table Cell) -->
         <div id="u80" class="ax_default table_cell">
-          <img id="u80_img" class="img " src="images/1__프로젝트_개요/u37.png"/>
+          <img id="u80_img" class="img " src="images/1__프로젝트_개요/u80.png"/>
         </div>
 
         <!-- Unnamed (Table Cell) -->
         <div id="u81" class="ax_default table_cell">
-          <img id="u81_img" class="img " src="images/1__프로젝트_개요/u37.png"/>
+          <img id="u81_img" class="img " src="images/1__프로젝트_개요/u80.png"/>
         </div>
 
         <!-- Unnamed (Table Cell) -->
         <div id="u82" class="ax_default table_cell">
-          <img id="u82_img" class="img " src="images/1__프로젝트_개요/u37.png"/>
+          <img id="u82_img" class="img " src="images/1__프로젝트_개요/u80.png"/>
         </div>
 
         <!-- Unnamed (Table Cell) -->
         <div id="u83" class="ax_default table_cell">
-          <img id="u83_img" class="img " src="images/1__프로젝트_개요/u59.png"/>
-        </div>
-
-        <!-- Unnamed (Table Cell) -->
-        <div id="u84" class="ax_default table_cell">
-          <img id="u84_img" class="img " src="images/1__프로젝트_개요/u84.png"/>
-        </div>
-
-        <!-- Unnamed (Table Cell) -->
-        <div id="u85" class="ax_default table_cell">
-          <img id="u85_img" class="img " src="images/1__프로젝트_개요/u84.png"/>
-        </div>
-
-        <!-- Unnamed (Table Cell) -->
-        <div id="u86" class="ax_default table_cell">
-          <img id="u86_img" class="img " src="images/1__프로젝트_개요/u86.png"/>
-        </div>
-
-        <!-- Unnamed (Table Cell) -->
-        <div id="u87" class="ax_default table_cell">
-          <img id="u87_img" class="img " src="images/1__프로젝트_개요/u86.png"/>
-        </div>
-
-        <!-- Unnamed (Table Cell) -->
-        <div id="u88" class="ax_default table_cell">
-          <img id="u88_img" class="img " src="images/1__프로젝트_개요/u86.png"/>
-        </div>
-
-        <!-- Unnamed (Table Cell) -->
-        <div id="u89" class="ax_default table_cell">
-          <img id="u89_img" class="img " src="images/1__프로젝트_개요/u89.png"/>
+          <img id="u83_img" class="img " src="images/1__프로젝트_개요/u83.png"/>
         </div>
       </div>
 
       <!-- Unnamed (Image) -->
-      <div id="u90" class="ax_default image">
-        <img id="u90_img" class="img " src="images/1__프로젝트_개요/u6.png"/>
+      <div id="u84" class="ax_default image">
+        <img id="u84_img" class="img " src="images/1__프로젝트_개요/u6.png"/>
       </div>
 
       <!-- Unnamed (Rectangle) -->
-      <div id="u91" class="ax_default paragraph">
-        <div id="u91_div" class=""></div>
-        <div id="u91_text" class="text ">
+      <div id="u85" class="ax_default paragraph">
+        <div id="u85_div" class=""></div>
+        <div id="u85_text" class="text ">
           <p><span>자료 공유 이력</span></p>
         </div>
       </div>
 
       <!-- Unnamed (Rectangle) -->
+      <div id="u86" class="ax_default flow_shape">
+        <div id="u86_div" class=""></div>
+        <div id="u86_text" class="text ">
+          <p><span>다운로드 상품 (잔여곡수 추가)</span></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (Rectangle) [reference page] -->
+      <div id="u86_ref" class="reference_page"></div>
+
+      <!-- Unnamed (Rectangle) -->
+      <div id="u87" class="ax_default flow_shape">
+        <div id="u87_div" class=""></div>
+        <div id="u87_text" class="text ">
+          <p><span>M머니/CJ ONE</span></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (Rectangle) [reference page] -->
+      <div id="u87_ref" class="reference_page"></div>
+
+      <!-- Unnamed (Rectangle) -->
+      <div id="u88" class="ax_default flow_shape">
+        <div id="u88_div" class=""></div>
+        <div id="u88_text" class="text ">
+          <p><span>다운로드 상품 (잔여곡수 추가)</span></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (Rectangle) [reference page] -->
+      <div id="u88_ref" class="reference_page"></div>
+
+      <!-- Unnamed (Rectangle) -->
+      <div id="u89" class="ax_default flow_shape">
+        <div id="u89_div" class=""></div>
+        <div id="u89_text" class="text ">
+          <p><span>정기상품 (결제대기 상태안내)</span></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (Rectangle) [reference page] -->
+      <div id="u89_ref" class="reference_page"></div>
+
+      <!-- Unnamed (Rectangle) -->
+      <div id="u90" class="ax_default flow_shape">
+        <div id="u90_div" class=""></div>
+        <div id="u90_text" class="text ">
+          <p><span>정기상품 (결제대기 상태안내)</span></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (Rectangle) [reference page] -->
+      <div id="u90_ref" class="reference_page"></div>
+
+      <!-- Unnamed (Rectangle) -->
+      <div id="u91" class="ax_default flow_shape">
+        <div id="u91_div" class=""></div>
+        <div id="u91_text" class="text ">
+          <p><span>정기상품 (결제대기 상태안내)</span></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (Rectangle) [reference page] -->
+      <div id="u91_ref" class="reference_page"></div>
+
+      <!-- Unnamed (Rectangle) -->
       <div id="u92" class="ax_default flow_shape">
         <div id="u92_div" class=""></div>
         <div id="u92_text" class="text ">
-          <p><span>다운로드 상품 (잔여곡수 추가)</span></p>
+          <p><span>정기상품 (결제대기 상태안내)</span></p>
         </div>
       </div>
 
@@ -675,61 +717,6 @@
 
       <!-- Unnamed (Rectangle) [reference page] -->
       <div id="u93_ref" class="reference_page"></div>
-
-      <!-- Unnamed (Rectangle) -->
-      <div id="u94" class="ax_default flow_shape">
-        <div id="u94_div" class=""></div>
-        <div id="u94_text" class="text ">
-          <p><span>다운로드 상품 (잔여곡수 추가)</span></p>
-        </div>
-      </div>
-
-      <!-- Unnamed (Rectangle) [reference page] -->
-      <div id="u94_ref" class="reference_page"></div>
-
-      <!-- Unnamed (Rectangle) -->
-      <div id="u95" class="ax_default flow_shape">
-        <div id="u95_div" class=""></div>
-        <div id="u95_text" class="text ">
-          <p><span>정기상품 (결제대기 상태안내)</span></p>
-        </div>
-      </div>
-
-      <!-- Unnamed (Rectangle) [reference page] -->
-      <div id="u95_ref" class="reference_page"></div>
-
-      <!-- Unnamed (Rectangle) -->
-      <div id="u96" class="ax_default flow_shape">
-        <div id="u96_div" class=""></div>
-        <div id="u96_text" class="text ">
-          <p><span>정기상품 (결제대기 상태안내)</span></p>
-        </div>
-      </div>
-
-      <!-- Unnamed (Rectangle) [reference page] -->
-      <div id="u96_ref" class="reference_page"></div>
-
-      <!-- Unnamed (Rectangle) -->
-      <div id="u97" class="ax_default flow_shape">
-        <div id="u97_div" class=""></div>
-        <div id="u97_text" class="text ">
-          <p><span>정기상품 (결제대기 상태안내)</span></p>
-        </div>
-      </div>
-
-      <!-- Unnamed (Rectangle) [reference page] -->
-      <div id="u97_ref" class="reference_page"></div>
-
-      <!-- Unnamed (Rectangle) -->
-      <div id="u98" class="ax_default flow_shape">
-        <div id="u98_div" class=""></div>
-        <div id="u98_text" class="text ">
-          <p><span>정기상품 (결제대기 상태안내)</span></p>
-        </div>
-      </div>
-
-      <!-- Unnamed (Rectangle) [reference page] -->
-      <div id="u98_ref" class="reference_page"></div>
     </div>
   </body>
 </html>
