--- a/정기상품__결제대기_상태안내_.html
+++ b/정기상품__결제대기_상태안내_.html
@@ -25,70 +25,150 @@
     <div id="base" class="">
 
       <!-- Unnamed (Image) -->
-      <div id="u262" class="ax_default image">
-        <img id="u262_img" class="img " src="images/다운로드_상품__잔여곡수_추가_/u126.png"/>
+      <div id="u252" class="ax_default image">
+        <img id="u252_img" class="img " src="images/다운로드_상품__잔여곡수_추가_/u121.png"/>
       </div>
 
       <!-- Unnamed (Image) -->
-      <div id="u263" class="ax_default image">
-        <img id="u263_img" class="img " src="images/다운로드_상품__잔여곡수_추가_/u142.png"/>
+      <div id="u253" class="ax_default image">
+        <img id="u253_img" class="img " src="images/다운로드_상품__잔여곡수_추가_/u137.png"/>
       </div>
 
       <!-- Unnamed (Rectangle) -->
-      <div id="u264" class="ax_default box_1">
-        <div id="u264_div" class=""></div>
+      <div id="u254" class="ax_default box_1">
+        <div id="u254_div" class=""></div>
       </div>
 
       <!-- Unnamed (자동결제 실패사유) -->
 
       <!-- Unnamed (Table) -->
-      <div id="u266" class="ax_default table">
+      <div id="u256" class="ax_default table">
 
         <!-- Unnamed (Table Cell) -->
-        <div id="u267" class="ax_default table_cell">
-          <img id="u267_img" class="img " src="images/정기상품__결제대기_상태안내__2/u214.png"/>
-          <div id="u267_text" class="text ">
+        <div id="u257" class="ax_default table_cell">
+          <img id="u257_img" class="img " src="images/정기상품__결제대기_상태안내__2/u211.png"/>
+          <div id="u257_text" class="text ">
             <p><span>결제실패 코드</span></p>
           </div>
         </div>
 
         <!-- Unnamed (Table Cell) -->
-        <div id="u268" class="ax_default table_cell">
-          <img id="u268_img" class="img " src="images/정기상품__결제대기_상태안내__2/u215.png"/>
-          <div id="u268_text" class="text ">
+        <div id="u258" class="ax_default table_cell">
+          <img id="u258_img" class="img " src="images/정기상품__결제대기_상태안내__2/u212.png"/>
+          <div id="u258_text" class="text ">
             <p><span>빌링시스템 문구</span></p>
           </div>
         </div>
 
         <!-- Unnamed (Table Cell) -->
-        <div id="u269" class="ax_default table_cell">
-          <img id="u269_img" class="img " src="images/정기상품__결제대기_상태안내__2/u216.png"/>
-          <div id="u269_text" class="text ">
-            <p><span>프론트 사유 표기 문구</span></p>
-          </div>
-        </div>
-
-        <!-- Unnamed (Table Cell) -->
-        <div id="u270" class="ax_default table_cell">
-          <img id="u270_img" class="img " src="images/정기상품__결제대기_상태안내__2/u217.png"/>
-          <div id="u270_text" class="text ">
+        <div id="u259" class="ax_default table_cell">
+          <img id="u259_img" class="img " src="images/정기상품__결제대기_상태안내__2/u213.png"/>
+          <div id="u259_text" class="text ">
             <p><span>POQ 결제 실패[[414] </span></p>
           </div>
         </div>
 
         <!-- Unnamed (Table Cell) -->
-        <div id="u271" class="ax_default table_cell">
-          <img id="u271_img" class="img " src="images/정기상품__결제대기_상태안내__2/u218.png"/>
-          <div id="u271_text" class="text ">
+        <div id="u260" class="ax_default table_cell">
+          <img id="u260_img" class="img " src="images/정기상품__결제대기_상태안내__2/u214.png"/>
+          <div id="u260_text" class="text ">
             <p><span>통신 요금 미납으로 휴대폰결제 서비스 이용이 불가능합니다.</span></p>
           </div>
         </div>
 
         <!-- Unnamed (Table Cell) -->
+        <div id="u261" class="ax_default table_cell">
+          <img id="u261_img" class="img " src="images/정기상품__결제대기_상태안내__2/u213.png"/>
+          <div id="u261_text" class="text ">
+            <p><span>POQ 결제 실패[[1002]</span></p>
+          </div>
+        </div>
+
+        <!-- Unnamed (Table Cell) -->
+        <div id="u262" class="ax_default table_cell">
+          <img id="u262_img" class="img " src="images/정기상품__결제대기_상태안내__2/u214.png"/>
+          <div id="u262_text" class="text ">
+            <p><span>가입자 주민번호 오류입니다. 정확한 주민번호 확인 후 다시 시도 부탁드립니다.</span></p>
+          </div>
+        </div>
+
+        <!-- Unnamed (Table Cell) -->
+        <div id="u263" class="ax_default table_cell">
+          <img id="u263_img" class="img " src="images/정기상품__결제대기_상태안내__2/u217.png"/>
+          <div id="u263_text" class="text ">
+            <p><span>POQ 결제 실패[[1003]</span></p>
+          </div>
+        </div>
+
+        <!-- Unnamed (Table Cell) -->
+        <div id="u264" class="ax_default table_cell">
+          <img id="u264_img" class="img " src="images/정기상품__결제대기_상태안내__2/u218.png"/>
+          <div id="u264_text" class="text ">
+            <p><span>분실 및 사용정지 등록된 폰으로는 결제가 불가합니다. (분실/사용정지 확인 : 휴대폰 국번없이114)</span></p>
+          </div>
+        </div>
+
+        <!-- Unnamed (Table Cell) -->
+        <div id="u265" class="ax_default table_cell">
+          <img id="u265_img" class="img " src="images/정기상품__결제대기_상태안내__2/u213.png"/>
+          <div id="u265_text" class="text ">
+            <p><span>POQ 결제 실패[[1006]</span></p>
+          </div>
+        </div>
+
+        <!-- Unnamed (Table Cell) -->
+        <div id="u266" class="ax_default table_cell">
+          <img id="u266_img" class="img " src="images/정기상품__결제대기_상태안내__2/u214.png"/>
+          <div id="u266_text" class="text ">
+            <p><span>요금 미납으로 결제 불가합니다. 통신사로 납부 후 재시도 부탁드립니다.</span></p>
+          </div>
+        </div>
+
+        <!-- Unnamed (Table Cell) -->
+        <div id="u267" class="ax_default table_cell">
+          <img id="u267_img" class="img " src="images/정기상품__결제대기_상태안내__2/u217.png"/>
+          <div id="u267_text" class="text ">
+            <p><span>POQ 결제 실패[[1018]</span></p>
+          </div>
+        </div>
+
+        <!-- Unnamed (Table Cell) -->
+        <div id="u268" class="ax_default table_cell">
+          <img id="u268_img" class="img " src="images/정기상품__결제대기_상태안내__2/u218.png"/>
+          <div id="u268_text" class="text ">
+            <p><span>소액결제 차단을 요청하신 번호입니다. 통신사 홈페이지에서 자동결제 차단 해제 후 이용 부탁드립니다.</span></p>
+          </div>
+        </div>
+
+        <!-- Unnamed (Table Cell) -->
+        <div id="u269" class="ax_default table_cell">
+          <img id="u269_img" class="img " src="images/정기상품__결제대기_상태안내__2/u217.png"/>
+          <div id="u269_text" class="text ">
+            <p><span>POQ 결제 실패[[1025]</span></p>
+          </div>
+        </div>
+
+        <!-- Unnamed (Table Cell) -->
+        <div id="u270" class="ax_default table_cell">
+          <img id="u270_img" class="img " src="images/정기상품__결제대기_상태안내__2/u218.png"/>
+          <div id="u270_text" class="text ">
+            <p><span>당월 한도 초과로 결제 불가합니다. 익월에 다시 이용해주시기 바랍니다. (한도 확인 휴대폰 국번없이114)</span></p>
+          </div>
+        </div>
+
+        <!-- Unnamed (Table Cell) -->
+        <div id="u271" class="ax_default table_cell">
+          <img id="u271_img" class="img " src="images/정기상품__결제대기_상태안내__2/u217.png"/>
+          <div id="u271_text" class="text ">
+            <p><span>POQ 결제 실패[[1032]</span></p>
+          </div>
+        </div>
+
+        <!-- Unnamed (Table Cell) -->
         <div id="u272" class="ax_default table_cell">
-          <img id="u272_img" class="img " src="images/정기상품__결제대기_상태안내__2/u219.png"/>
+          <img id="u272_img" class="img " src="images/정기상품__결제대기_상태안내__2/u218.png"/>
           <div id="u272_text" class="text ">
-            <p><span>요금 미납</span></p>
+            <p><span>휴대폰소액결제 차단을 설정한 번호입니다. 차단해제를 하신 뒤 이용해 주시기 바랍니다.</span></p>
           </div>
         </div>
 
@@ -96,7 +176,7 @@
         <div id="u273" class="ax_default table_cell">
           <img id="u273_img" class="img " src="images/정기상품__결제대기_상태안내__2/u217.png"/>
           <div id="u273_text" class="text ">
-            <p><span>POQ 결제 실패[[1002]</span></p>
+            <p><span>POQ 결제 실패[[1071]</span></p>
           </div>
         </div>
 
@@ -104,244 +184,108 @@
         <div id="u274" class="ax_default table_cell">
           <img id="u274_img" class="img " src="images/정기상품__결제대기_상태안내__2/u218.png"/>
           <div id="u274_text" class="text ">
-            <p><span>가입자 주민번호 오류입니다. 정확한 주민번호 확인 후 다시 시도 부탁드립니다.</span></p>
-          </div>
-        </div>
-
-        <!-- Unnamed (Table Cell) -->
-        <div id="u275" class="ax_default table_cell">
-          <img id="u275_img" class="img " src="images/정기상품__결제대기_상태안내__2/u219.png"/>
-          <div id="u275_text" class="text ">
-            <p><span>가입자 주민번호 오류</span></p>
-          </div>
-        </div>
-
-        <!-- Unnamed (Table Cell) -->
-        <div id="u276" class="ax_default table_cell">
-          <img id="u276_img" class="img " src="images/정기상품__결제대기_상태안내__2/u223.png"/>
-          <div id="u276_text" class="text ">
-            <p><span>POQ 결제 실패[[1003]</span></p>
-          </div>
-        </div>
-
-        <!-- Unnamed (Table Cell) -->
-        <div id="u277" class="ax_default table_cell">
-          <img id="u277_img" class="img " src="images/정기상품__결제대기_상태안내__2/u224.png"/>
-          <div id="u277_text" class="text ">
-            <p><span>분실 및 사용정지 등록된 폰으로는 결제가 불가합니다. (분실/사용정지 확인 : 휴대폰 국번없이114)</span></p>
-          </div>
-        </div>
-
-        <!-- Unnamed (Table Cell) -->
-        <div id="u278" class="ax_default table_cell">
-          <img id="u278_img" class="img " src="images/정기상품__결제대기_상태안내__2/u225.png"/>
-          <div id="u278_text" class="text ">
-            <p><span>분실 또는 사용 정지된 휴대폰 번호</span></p>
-          </div>
-        </div>
-
-        <!-- Unnamed (Table Cell) -->
-        <div id="u279" class="ax_default table_cell">
-          <img id="u279_img" class="img " src="images/정기상품__결제대기_상태안내__2/u217.png"/>
-          <div id="u279_text" class="text ">
-            <p><span>POQ 결제 실패[[1006]</span></p>
-          </div>
-        </div>
-
-        <!-- Unnamed (Table Cell) -->
-        <div id="u280" class="ax_default table_cell">
-          <img id="u280_img" class="img " src="images/정기상품__결제대기_상태안내__2/u218.png"/>
-          <div id="u280_text" class="text ">
-            <p><span>요금 미납으로 결제 불가합니다. 통신사로 납부 후 재시도 부탁드립니다.</span></p>
-          </div>
-        </div>
-
-        <!-- Unnamed (Table Cell) -->
-        <div id="u281" class="ax_default table_cell">
-          <img id="u281_img" class="img " src="images/정기상품__결제대기_상태안내__2/u219.png"/>
-          <div id="u281_text" class="text ">
-            <p><span>요금 미납</span></p>
-          </div>
-        </div>
-
-        <!-- Unnamed (Table Cell) -->
-        <div id="u282" class="ax_default table_cell">
-          <img id="u282_img" class="img " src="images/정기상품__결제대기_상태안내__2/u223.png"/>
-          <div id="u282_text" class="text ">
-            <p><span>POQ 결제 실패[[1018]</span></p>
-          </div>
-        </div>
-
-        <!-- Unnamed (Table Cell) -->
-        <div id="u283" class="ax_default table_cell">
-          <img id="u283_img" class="img " src="images/정기상품__결제대기_상태안내__2/u224.png"/>
-          <div id="u283_text" class="text ">
-            <p><span>소액결제 차단을 요청하신 번호입니다. 통신사 홈페이지에서 자동결제 차단 해제 후 이용 부탁드립니다.</span></p>
-          </div>
-        </div>
-
-        <!-- Unnamed (Table Cell) -->
-        <div id="u284" class="ax_default table_cell">
-          <img id="u284_img" class="img " src="images/정기상품__결제대기_상태안내__2/u225.png"/>
-          <div id="u284_text" class="text ">
-            <p><span>소액결제 차단된 휴대폰 번호</span></p>
-          </div>
-        </div>
-
-        <!-- Unnamed (Table Cell) -->
-        <div id="u285" class="ax_default table_cell">
-          <img id="u285_img" class="img " src="images/정기상품__결제대기_상태안내__2/u223.png"/>
-          <div id="u285_text" class="text ">
-            <p><span>POQ 결제 실패[[1025]</span></p>
-          </div>
-        </div>
-
-        <!-- Unnamed (Table Cell) -->
-        <div id="u286" class="ax_default table_cell">
-          <img id="u286_img" class="img " src="images/정기상품__결제대기_상태안내__2/u224.png"/>
-          <div id="u286_text" class="text ">
-            <p><span>당월 한도 초과로 결제 불가합니다. 익월에 다시 이용해주시기 바랍니다. (한도 확인 휴대폰 국번없이114)</span></p>
-          </div>
-        </div>
-
-        <!-- Unnamed (Table Cell) -->
-        <div id="u287" class="ax_default table_cell">
-          <img id="u287_img" class="img " src="images/정기상품__결제대기_상태안내__2/u225.png"/>
-          <div id="u287_text" class="text ">
-            <p><span>당월 한도 초과</span></p>
-          </div>
-        </div>
-
-        <!-- Unnamed (Table Cell) -->
-        <div id="u288" class="ax_default table_cell">
-          <img id="u288_img" class="img " src="images/정기상품__결제대기_상태안내__2/u223.png"/>
-          <div id="u288_text" class="text ">
-            <p><span>POQ 결제 실패[[1032]</span></p>
-          </div>
-        </div>
-
-        <!-- Unnamed (Table Cell) -->
-        <div id="u289" class="ax_default table_cell">
-          <img id="u289_img" class="img " src="images/정기상품__결제대기_상태안내__2/u224.png"/>
-          <div id="u289_text" class="text ">
-            <p><span>휴대폰소액결제 차단을 설정한 번호입니다. 차단해제를 하신 뒤 이용해 주시기 바랍니다.</span></p>
-          </div>
-        </div>
-
-        <!-- Unnamed (Table Cell) -->
-        <div id="u290" class="ax_default table_cell">
-          <img id="u290_img" class="img " src="images/정기상품__결제대기_상태안내__2/u225.png"/>
-          <div id="u290_text" class="text ">
-            <p><span>소액결제 차단된 휴대폰 번호</span></p>
-          </div>
-        </div>
-
-        <!-- Unnamed (Table Cell) -->
-        <div id="u291" class="ax_default table_cell">
-          <img id="u291_img" class="img " src="images/정기상품__결제대기_상태안내__2/u238.png"/>
-          <div id="u291_text" class="text ">
-            <p><span>POQ 결제 실패[[1071]</span></p>
-          </div>
-        </div>
-
-        <!-- Unnamed (Table Cell) -->
-        <div id="u292" class="ax_default table_cell">
-          <img id="u292_img" class="img " src="images/정기상품__결제대기_상태안내__2/u239.png"/>
-          <div id="u292_text" class="text ">
             <p><span>등록된 자동결제 거래정보가 존재하지 않습니다.</span></p>
           </div>
         </div>
 
         <!-- Unnamed (Table Cell) -->
-        <div id="u293" class="ax_default table_cell">
-          <img id="u293_img" class="img " src="images/정기상품__결제대기_상태안내__2/u240.png"/>
-          <div id="u293_text" class="text ">
-            <p><span>등록된 자동결제 정보 오류</span></p>
+        <div id="u275" class="ax_default table_cell">
+          <img id="u275_img" class="img " src="images/정기상품__결제대기_상태안내__2/u229.png"/>
+          <div id="u275_text" class="text ">
+            <p><span>...</span></p>
+          </div>
+        </div>
+
+        <!-- Unnamed (Table Cell) -->
+        <div id="u276" class="ax_default table_cell">
+          <img id="u276_img" class="img " src="images/정기상품__결제대기_상태안내__2/u230.png"/>
+          <div id="u276_text" class="text ">
+            <p><span>상세케이스 추가 확인필요</span></p>
           </div>
         </div>
       </div>
 
       <!-- Unnamed (Rectangle) -->
-      <div id="u294" class="ax_default paragraph">
-        <div id="u294_div" class=""></div>
+      <div id="u277" class="ax_default paragraph">
+        <div id="u277_div" class=""></div>
       </div>
 
       <!-- Unnamed (Rectangle) -->
-      <div id="u295" class="ax_default box_1">
-        <img id="u295_img" class="img " src="images/정기상품__결제대기_상태안내_/u295.png"/>
+      <div id="u278" class="ax_default box_1">
+        <img id="u278_img" class="img " src="images/정기상품__결제대기_상태안내_/u278.png"/>
       </div>
 
       <!-- Unnamed (Image) -->
-      <div id="u296" class="ax_default image">
-        <img id="u296_img" class="img " src="images/정기상품__결제대기_상태안내_/u296.png"/>
+      <div id="u279" class="ax_default image">
+        <img id="u279_img" class="img " src="images/정기상품__결제대기_상태안내_/u279.png"/>
       </div>
 
       <!-- Unnamed (Rectangle) -->
-      <div id="u297" class="ax_default box_1">
-        <img id="u297_img" class="img " src="images/정기상품__결제대기_상태안내_/u297.png"/>
+      <div id="u280" class="ax_default box_1">
+        <img id="u280_img" class="img " src="images/정기상품__결제대기_상태안내_/u280.png"/>
       </div>
 
       <!-- Unnamed (Rectangle) -->
-      <div id="u298" class="ax_default paragraph">
-        <div id="u298_div" class=""></div>
-        <div id="u298_text" class="text ">
+      <div id="u281" class="ax_default paragraph">
+        <div id="u281_div" class=""></div>
+        <div id="u281_text" class="text ">
           <p><span>사용중인 이용권이 없습니다.</span></p>
         </div>
       </div>
 
       <!-- Unnamed (Image) -->
-      <div id="u299" class="ax_default image">
-        <img id="u299_img" class="img " src="images/정기상품__결제대기_상태안내_/u299.png"/>
+      <div id="u282" class="ax_default image">
+        <img id="u282_img" class="img " src="images/정기상품__결제대기_상태안내_/u282.png"/>
       </div>
 
       <!-- Unnamed (Rectangle) -->
-      <div id="u300" class="ax_default box_1">
-        <img id="u300_img" class="img " src="images/정기상품__결제대기_상태안내_/u300.png"/>
+      <div id="u283" class="ax_default box_1">
+        <img id="u283_img" class="img " src="images/정기상품__결제대기_상태안내_/u283.png"/>
       </div>
 
       <!-- Unnamed (Image) -->
-      <div id="u301" class="ax_default image">
-        <img id="u301_img" class="img " src="images/정기상품__결제대기_상태안내_/u301.png"/>
+      <div id="u284" class="ax_default image">
+        <img id="u284_img" class="img " src="images/정기상품__결제대기_상태안내_/u284.png"/>
       </div>
 
       <!-- Unnamed (Rectangle) -->
-      <div id="u302" class="ax_default box_1">
-        <img id="u302_img" class="img " src="images/정기상품__결제대기_상태안내_/u302.png"/>
+      <div id="u285" class="ax_default box_1">
+        <img id="u285_img" class="img " src="images/정기상품__결제대기_상태안내_/u285.png"/>
       </div>
 
       <!-- Unnamed (Image) -->
-      <div id="u303" class="ax_default image">
-        <img id="u303_img" class="img " src="images/정기상품__결제대기_상태안내_/u303.png"/>
+      <div id="u286" class="ax_default image">
+        <img id="u286_img" class="img " src="images/정기상품__결제대기_상태안내_/u286.png"/>
       </div>
 
       <!-- Unnamed (Rectangle) -->
-      <div id="u304" class="ax_default box_1">
-        <img id="u304_img" class="img " src="images/정기상품__결제대기_상태안내_/u304.png"/>
+      <div id="u287" class="ax_default box_1">
+        <img id="u287_img" class="img " src="images/정기상품__결제대기_상태안내_/u287.png"/>
       </div>
 
       <!-- Unnamed (Rectangle) -->
-      <div id="u305" class="ax_default paragraph">
-        <div id="u305_div" class=""></div>
-        <div id="u305_text" class="text ">
+      <div id="u288" class="ax_default paragraph">
+        <div id="u288_div" class=""></div>
+        <div id="u288_text" class="text ">
           <p><span>※ 현재 정기 상품의 자동결제가 처리되지 않아 결제대기입니다. (사유 : $결제수단 명의변경)</span></p>
         </div>
       </div>
 
       <!-- Unnamed (Rectangle) -->
-      <div id="u306" class="ax_default box_1">
-        <div id="u306_div" class=""></div>
+      <div id="u289" class="ax_default box_1">
+        <div id="u289_div" class=""></div>
       </div>
 
       <!-- Unnamed (Rectangle) -->
-      <div id="u307" class="ax_default box_1">
-        <div id="u307_div" class=""></div>
-        <div id="u307_text" class="text ">
+      <div id="u290" class="ax_default box_1">
+        <div id="u290_div" class=""></div>
+        <div id="u290_text" class="text ">
           <p><span>CASE</span></p>
         </div>
       </div>
 
       <!-- Unnamed (Rectangle) [footnote] -->
-      <div id="u307_ann" class="annotation"></div>
+      <div id="u290_ann" class="annotation"></div>
     </div>
   </body>
 </html>
