--- a/m___cj_one.html
+++ b/m___cj_one.html
@@ -25,89 +25,102 @@
     <div id="base" class="">
 
       <!-- Unnamed (Image) -->
-      <div id="u163" class="ax_default image">
-        <img id="u163_img" class="img " src="images/m___cj_one/u163.png"/>
+      <div id="u158" class="ax_default image">
+        <img id="u158_img" class="img " src="images/m___cj_one/u158.png"/>
       </div>
 
       <!-- Unnamed (Image) -->
-      <div id="u164" class="ax_default image">
-        <img id="u164_img" class="img " src="images/m___cj_one/u164.png"/>
+      <div id="u159" class="ax_default image">
+        <img id="u159_img" class="img " src="images/m___cj_one/u159.png"/>
       </div>
 
       <!-- Unnamed (Rectangle) -->
-      <div id="u165" class="ax_default box_1">
-        <img id="u165_img" class="img " src="images/m___cj_one/u165.png"/>
-        <div id="u165_text" class="text ">
+      <div id="u160" class="ax_default box_1">
+        <img id="u160_img" class="img " src="images/m___cj_one/u160.png"/>
+        <div id="u160_text" class="text ">
           <p><span>신용카드 (현대카드)</span></p>
         </div>
       </div>
 
       <!-- Unnamed (Rectangle) -->
-      <div id="u166" class="ax_default box_1">
-        <img id="u166_img" class="img " src="images/m___cj_one/u166.png"/>
-        <div id="u166_text" class="text ">
+      <div id="u161" class="ax_default box_1">
+        <img id="u161_img" class="img " src="images/m___cj_one/u161.png"/>
+        <div id="u161_text" class="text ">
           <p><span>신용카드 정기결제 (현대카드)</span></p>
         </div>
       </div>
 
       <!-- Unnamed (Rectangle) -->
-      <div id="u167" class="ax_default box_1">
-        <img id="u167_img" class="img " src="images/m___cj_one/u167.png"/>
-        <div id="u167_text" class="text ">
+      <div id="u162" class="ax_default box_1">
+        <img id="u162_img" class="img " src="images/m___cj_one/u162.png"/>
+        <div id="u162_text" class="text ">
           <p><span>신용카드 (간편결제-현대카드)</span></p>
         </div>
       </div>
 
       <!-- Unnamed (Rectangle) -->
-      <div id="u168" class="ax_default box_1">
-        <img id="u168_img" class="img " src="images/m___cj_one/u167.png"/>
-        <div id="u168_text" class="text ">
+      <div id="u163" class="ax_default box_1">
+        <img id="u163_img" class="img " src="images/m___cj_one/u162.png"/>
+        <div id="u163_text" class="text ">
           <p><span>&nbsp; 휴대폰(010-****-1234)&nbsp; </span></p>
         </div>
       </div>
 
       <!-- Unnamed (Rectangle) -->
-      <div id="u169" class="ax_default box_1">
-        <img id="u169_img" class="img " src="images/m___cj_one/u169.png"/>
+      <div id="u164" class="ax_default box_1">
+        <img id="u164_img" class="img " src="images/m___cj_one/u164.png"/>
       </div>
 
       <!-- Unnamed (Rectangle) -->
-      <div id="u170" class="ax_default box_1">
-        <div id="u170_div" class=""></div>
+      <div id="u165" class="ax_default box_1">
+        <div id="u165_div" class=""></div>
       </div>
 
       <!-- Unnamed (Rectangle) -->
-      <div id="u171" class="ax_default box_1">
-        <div id="u171_div" class=""></div>
-        <div id="u171_text" class="text ">
+      <div id="u166" class="ax_default box_1">
+        <div id="u166_div" class=""></div>
+        <div id="u166_text" class="text ">
           <p><span>CASE</span></p>
         </div>
       </div>
 
       <!-- Unnamed (Rectangle) [footnote] -->
-      <div id="u171_ann" class="annotation"></div>
+      <div id="u166_ann" class="annotation"></div>
 
       <!-- Unnamed (Rectangle) -->
-      <div id="u172" class="ax_default box_1">
-        <img id="u172_img" class="img " src="images/m___cj_one/u172.png"/>
-        <div id="u172_text" class="text ">
+      <div id="u167" class="ax_default box_1">
+        <img id="u167_img" class="img " src="images/m___cj_one/u167.png"/>
+        <div id="u167_text" class="text ">
           <p><span>나의 결제내역</span></p>
         </div>
       </div>
 
       <!-- Unnamed (Rectangle) -->
-      <div id="u173" class="ax_default box_1">
-        <div id="u173_div" class=""></div>
+      <div id="u168" class="ax_default box_1">
+        <div id="u168_div" class=""></div>
       </div>
 
       <!-- Unnamed (Rectangle) [footnote] -->
-      <div id="u173_ann" class="annotation"></div>
+      <div id="u168_ann" class="annotation"></div>
 
       <!-- Unnamed (Rectangle) -->
-      <div id="u174" class="ax_default heading_1">
-        <div id="u174_div" class=""></div>
-        <div id="u174_text" class="text ">
+      <div id="u169" class="ax_default heading_1">
+        <div id="u169_div" class=""></div>
+        <div id="u169_text" class="text ">
           <p><span>- 차후 진행 예정 - </span></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (Rectangle) -->
+      <div id="u170" class="ax_default box_1">
+        <img id="u170_img" class="img " src="images/m___cj_one/u170.png"/>
+      </div>
+
+      <!-- Unnamed (Rectangle) -->
+      <div id="u171" class="ax_default heading_1">
+        <div id="u171_div" class=""></div>
+        <div id="u171_text" class="text ">
+          <p><span>8,400원 (취소)</span></p>
         </div>
       </div>
     </div>
